--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,22 @@
   	<dependency>
 			<groupId>com.asksunny.commons</groupId>
 			<artifactId>utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
   	<dependency>
   		<groupId>commons-cli</groupId>
   		<artifactId>commons-cli</artifactId>
   		<version>1.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javassist</groupId>
+  		<artifactId>javassist</artifactId>
+  		<version>3.12.1.GA</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-log4j12</artifactId>
+  		<version>1.7.5</version>
   	</dependency>
   </dependencies>
 </project>
